--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,1 +1,62 @@
-@import '../node_modules/modern-normalize/modern-normalize.css'
+/* General styling*/
+@import '../node_modules/modern-normalize/modern-normalize.css';
+
+/* Header styling */
+body, section {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+} 
+
+.menu, .info {
+    display: flex;
+}
+
+.header {
+    background-color: rgb(48, 155, 140);
+    height: 40vh;
+    color: white;
+}
+
+.menu {
+    display: flex;
+    list-style-type: none;
+    width: 30%;
+    margin-left: auto;
+    margin-right: 2%;
+    flex-wrap: wrap;
+}
+
+.menu > li {
+    flex: 1 1 auto;
+    padding: 7px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+/* Footer styling */
+.footer {
+    background-color: rgb(48, 155, 140);
+    color: white;
+    height: 20vh;
+    padding: 20px;
+}
+
+.info {
+    justify-content: space-between;
+} 
+
+.links {
+    list-style-type: none;
+} 
+
+.links > li {
+    padding: 7px;
+}
+
+.copyright {
+    margin-bottom: 20px;
+}
