--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,6 +1,14 @@
 /* General styling*/
 @import '../node_modules/modern-normalize/modern-normalize.css';
 
+.service {
+    width: 300px;
+    height: 300px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-radius: 10%;
+}
+
 /* Header styling */
 body, section {
     display: flex;
