--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,5 +1,35 @@
 /* General styling*/
 @import '../node_modules/modern-normalize/modern-normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+body {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+h1, h2, h3 {
+    font-family: 'Anybody', sans-serif;
+    letter-spacing: 0.1rem;
+    font-size: 10rem;
+}
+
+h1 {
+    font-size: 2.5rem;
+    font-weight: 1000;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 1.75rem;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+h3 {
+    font-size: 1.25rem;
+    font-weight: 750;
+    text-transform: uppercase;
+}
 
 .service {
     width: 300px;
@@ -7,6 +37,16 @@
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     border-radius: 10%;
+    padding: 15px;
+}
+
+.logo {
+    border: 2px solid white;
+    width: fit-content;
+}
+
+a > img {
+    padding: 20px;
 }
 
 /* Header styling */
@@ -22,7 +62,7 @@ body, section {
 
 .header {
     padding: 20px;
-    background-color: rgb(66, 143, 194);
+    background-color: black;
     height: 40vh;
     color: white;
 }
@@ -48,7 +88,7 @@ a {
 
 /* Footer styling */
 .footer {
-    background-color: rgb(66, 143, 194);
+    background-color: black;
     color: white;
     height: fit-content;
     padding: 20px;
