--- a/public/css/index.css
+++ b/public/css/index.css
@@ -24,8 +24,38 @@ q {
     border-bottom: 1px solid black;
 }
 
+.portfolio {
+    background-color: white;
+    padding: 15px;
+    position: relative;
+    top: 20px;
+}
+
+.work-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: space-around;
+}
+
+.design {
+    width: 300px;
+    height: 300px;
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.design > a {
+    color: rgb(20, 34, 98);
+    font-size: 1.5rem;
+    padding: 3px;
+}
+
 .payments {
     margin-left: auto;
     margin-right: 0px;
     max-width: 550px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-left: 1px solid;
 }
