--- a/public/css/default.css
+++ b/public/css/default.css
@@ -11,6 +11,12 @@ a > i:hover {
     opacity: 0.8;
 }
 
+.part {
+    min-height: 800px;
+    width: 80%;
+    margin: 0 auto;
+}
+
 button {
     color: white;
     background-color: rgb(20, 34, 98);
@@ -45,6 +51,26 @@ h3 {
     font-size: 1.25rem;
     font-weight: 750;
     text-transform: uppercase;
+}
+
+.work-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: space-around;
+}
+
+.design {
+    width: 300px;
+    height: 300px;
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.design > a {
+    color: rgb(20, 34, 98);
+    font-size: 1.5rem;
+    padding: 3px;
 }
 
 .service {
