--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,35 +27,19 @@ q {
 .portfolio {
     background-color: white;
     padding: 15px;
-    position: relative;
-    top: 20px;
-}
-
-.work-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    justify-content: space-around;
-}
-
-.design {
-    width: 300px;
-    height: 300px;
-    border: 1px solid black;
-    padding: 20px;
-}
-
-.design > a {
-    color: rgb(20, 34, 98);
-    font-size: 1.5rem;
-    padding: 3px;
+    padding-bottom: -15px;
 }
 
 .payments {
     margin-left: auto;
     margin-right: 0px;
-    max-width: 550px;
+    width: 50%;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    border-left: 1px solid;
+    border-left: 1px solid black;
+    border-right: 1px dashed black;
+}
+
+.services-container > h2 {
+    text-align: center;
 }
