--- a/public/css/default.css
+++ b/public/css/default.css
@@ -67,7 +67,14 @@ h3 {
     padding: 20px;
 }
 
-.design > a {
+
+.computer {
+    width: 120px;
+    height: 120px;
+    margin: 0 auto;
+}
+
+.design > a > i {
     color: rgb(20, 34, 98);
     font-size: 1.5rem;
     padding: 3px;
