--- a/public/css/media.css
+++ b/public/css/media.css
@@ -1,3 +1,7 @@
+/* Animations */
+
+
+/* Screen sizing */
 @media screen and (max-width: 669px) {
     .services-container {
         display: flex;
