--- a/public/css/services.css
+++ b/public/css/services.css
@@ -32,16 +32,22 @@ h1, .points, .process, .services-container {
 }
 
 .child {
-    display: flex;
-    gap: 18rem;
-    justify-content: flex-end;
+    background-color: gray;
+    padding: 5%;
+    color: white;
 }
 
-@media screen and (max-width: 1318px) {
+.child > p {
+    width: 75%;
+    font-size: 2rem;
+}
+
+@media screen and (min-width: 1318px) {
     .child {
         display: flex;
-        gap: 18rem;
-        justify-content: flex-start;
+        gap: 4rem;
+        justify-content: flex-end;
+        flex-wrap: wrap;
     }
 
     .blog {
@@ -51,6 +57,7 @@ h1, .points, .process, .services-container {
 
     .caption {
         padding-left: 3px;
+        margin-right: 18rem;
     }
 }
 
