--- a/public/css/default.css
+++ b/public/css/default.css
@@ -126,7 +126,7 @@ section {
     background-color: black;
     height: 40vh;
     color: white;
-    width: 100%
+    min-width: 100%;
 }
 
 .menu {
