--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,7 @@
 }
 
 .summary, .introduction > p, .payments, .portfolio,
-.services-container {
+.services-container, .slide-left, .slide-right {
     padding: 20px
 }
 
@@ -27,6 +27,9 @@ q {
 
 .right {
     align-self: flex-end;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.7rem;
 }
 
 .button { 
@@ -66,6 +69,47 @@ q {
     width: 200px;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+}
+
+.slide-container {
+    display: flex;
+    flex-direction: row;
+    min-height: 500px;
+}
+
+.inside {
+    padding-bottom: 100px;
+}
+
+.slide-left {
+    background-color: black;
+    color: white;
+    width: 35%;
+    padding: 10px;
+}
+
+.slide-left > p, .slide-left > h2, .slide-right > h2, .slide-right > p {
+    width: 70%;
+    padding: 30px 10px;
+} 
+
+.slide-left > p, .slide-right > p {
+    font-size: 1.4rem;
+}
+
+.slide-right {
+    background-color: gray;
+    color: white;
+    width: 35%;
+    padding: 10px;
+}
+
+.slide-container > img {
+    width: 30%;
+}
+
+.link {
+    color: #2a3e97;
 }
 
 .portfolio {
