--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,16 @@
+@media screen and (min-width: 1500px) {
+    .slide-container {
+        display: flex;
+        flex-direction: column;
+        min-height: 500px;
+    }
+
+    .pic {
+        width: 40%;
+        height: 50%;
+    }
+}
+
 .left, .introduction > p, .payments {
     width: 50%;
 }
@@ -73,7 +86,6 @@ q {
 
 .slide-container {
     display: flex;
-    flex-direction: row;
     min-height: 500px;
 }
 
@@ -84,7 +96,7 @@ q {
 .slide-left {
     background-color: black;
     color: white;
-    width: 35%;
+    width: 40%;
     padding: 10px;
 }
 
@@ -100,13 +112,10 @@ q {
 .slide-right {
     background-color: gray;
     color: white;
-    width: 35%;
+    width: 40%;
     padding: 10px;
 }
 
-.slide-container > img {
-    width: 30%;
-}
 
 .link {
     color: #2a3e97;
