--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,16 +1,3 @@
-@media screen and (min-width: 1500px) {
-    .slide-container {
-        display: flex;
-        flex-direction: column;
-        min-height: 500px;
-    }
-
-    .pic {
-        width: 40%;
-        height: 50%;
-    }
-}
-
 .left, .introduction > p, .payments {
     width: 50%;
 }
@@ -84,19 +71,24 @@ q {
     border-bottom: 1px solid black;
 }
 
-.slide-container {
-    display: flex;
-    min-height: 500px;
-}
-
 .inside {
     padding-bottom: 100px;
+}
+
+.slide-container {
+    display: flex;
+    overflow: hidden;
+}
+
+.pic {
+    max-width: 100%;
+    min-height: 100%;
 }
 
 .slide-left {
     background-color: black;
     color: white;
-    width: 40%;
+    max-width: 35%;
     padding: 10px;
 }
 
@@ -112,10 +104,9 @@ q {
 .slide-right {
     background-color: gray;
     color: white;
-    width: 40%;
+    max-width: 35%;
     padding: 10px;
 }
-
 
 .link {
     color: #2a3e97;
