--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,5 +1,5 @@
 h1 {
-    margin-bottom: 0;
+    margin-bottom: 7px;
 }
 
 .icons, .email, h1 {
@@ -18,6 +18,10 @@ h1 {
     color: black;
 }
 
+.link {
+    color: #668df8;
+}
+
 .icons {
     margin-top: 20px;
     background-color: black;
@@ -34,18 +38,28 @@ h1 {
 
 .slide-container {
     width: 40%;
+    height: 1000px;
+    background-color: rgb(71, 71, 71);
 }
 
 .slide-left {
     background-color: black;
     color: white;
     padding: 10px;
-    min-height: 300px;
+    min-height: 25%;
+    max-width: 100%;
 }
 
 .slide-right {
     background-color: gray;
     color: white;
     padding: 10px;
-    min-height: 300px;
+    min-height: 25%;
+    margin-top: -5px;
+    max-width: 100%;
+}
+
+.pic {
+    max-height: 50%;
+    max-width: 100%;
 }
