--- a/public/css/default.css
+++ b/public/css/default.css
@@ -123,7 +123,7 @@ section {
 .header {
     padding: 20px;
     background-color: black;
-    height: 40vh;
+    min-height: 40vh;
     color: white;
     min-width: 100%;
 }
