--- a/public/css/default.css
+++ b/public/css/default.css
@@ -23,7 +23,8 @@ html {
 
 body {
     font-family: 'Roboto Condensed', sans-serif;
-    max-width: fit-content;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .here {
@@ -123,8 +124,16 @@ section {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    overflow: hidden;
+    max-width: 100%;
 } 
+
+.logo > a > img {
+    border: 1px solid black;
+}
+
+.logo > a > img:hover {
+   border: 1px solid white;
+}
 
 .menu, .info {
     display: flex;
@@ -135,7 +144,7 @@ section {
     background-color: black;
     min-height: 40vh;
     color: white;
-    min-width: 100%;
+    max-width: 100%;
     overflow: hidden;
 }
 
@@ -176,6 +185,7 @@ a:hover {
     background-color: black;
     color: white;
     height: fit-content;
+    width: 100vw;
     padding: 20px;
     overflow: hidden;
 }
