--- a/public/css/default.css
+++ b/public/css/default.css
@@ -185,7 +185,6 @@ a:hover {
     background-color: black;
     color: white;
     height: fit-content;
-    width: 100vw;
     padding: 20px;
     overflow: hidden;
 }
@@ -210,6 +209,7 @@ a:hover {
 
 .links > li {
     padding: 7px;
+    margin-right: 20px;
     font-size: 1.2rem;
 }
 
