--- a/public/css/about.css
+++ b/public/css/about.css
@@ -21,10 +21,25 @@ h1, .about, #portfolio, .services-container, .picture {
     width: 50%;
 }
 
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 0px) {
     .features {
-        width: 350px;
-        height: 230px;
+        width: 250px;
+        height: 170px;
+    }
+
+    .quote {
+        font-size: 2rem;
+    }
+
+    .picture > p {
+        font-size: 1.25rem;
+    }
+}
+
+@media screen and (min-width: 480px) {
+    .features {
+        width: 340px;
+        height: 225px;
     }
 
     .quote {
