Wrap text in p tags

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -60,7 +60,8 @@
     }
 }
 
-.service > ul > button, .service > ul > li {
+.service > ul > button, .service > ul > li,
+.service > p {
     font-size: 1.1rem;
 }
 
